responsive correction & new components

--- a/src/app/carousel-item/carousel-item.component.html
+++ b/src/app/carousel-item/carousel-item.component.html
@@ -1,8 +1,11 @@
-<div class="d-flex align-items-center" style="background-color: #fdf3f1;">
-    <img src="assets/images/carousel3.jpg" class="d-block w-50" alt="..." />
-    <div>
-        <h3 class="fw-bold px-5">Nouveaux arrivés !</h3>
-        <p class="px-5">Les éditions « La tête ailleurs » ont rejoint les invités du lôcal ! Une
+<div class="d-flex flex-row align-items-center" style="background-color: #fdf3f1;">
+    <div class="carousel-image">
+        <img src="assets/images/carousel3.jpg" alt="..."  class="img-fluid"/>
+    </div>
+    
+    <div class="p-3 responsive-text">
+        <p class="fw-bold">Nouveaux arrivés !</p>
+        <p>Les éditions « La tête ailleurs » ont rejoint les invités du lôcal ! Une
             maison d’édition écolo, sociale et urbaine, implantée à Saint-Denis</p>
     </div>
 </div>
