--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,15 @@
 <!-- Footer -->
 <footer class="d-flex flex-column bg-dark text-white">
     <!-- Section: Upper -->
-    <section class="d-flex flex-row align-items-center justify-content-between px-4" style="background-color: #737373;">
+    <section class="d-flex flex-sm-row flex-column align-items-center justify-content-between px-4 pt-2" style="background-color: #737373;">
 
         <!-- Social icons -->
-        <div class="flex-fill">
+        <div class="footer-menu">
             <a href="" class="me-4 text-reset">
                 <i class="far fa-envelope fa-2x"></i>
             </a>
             <a href="" class="me-4 text-reset">
-                <i class="fab fa-facebook fa-2x"></i>
+                <i class="fab fa-facebook fa-2x my-3"></i>
             </a>
             <a href="" class="me-4 text-reset">
                 <i class="fab fa-instagram fa-2x"></i>
@@ -17,11 +17,11 @@
         </div>
 
         <!-- NewsletterInput -->
-        <div class="me-4 footer-menu">
-            <p class="mb-0"><strong>Inscrivez-vous pour la Newsletter</strong></p>
+        <div class="me-4 footer-menu text-center">
+            <p class="mb-0">Inscrivez-vous pour la Newsletter</p>
         </div>
         <form action="" class="my-2">
-            <div class="d-flex flex-row input-group">
+            <div class="d-flex flex-lg-row input-group justify-content-md-end flex-sm-column">
                 <input type="email" class="form-control-default ps-2" placeholder="Votre e-mail..."
                     aria-label="Votre e-mail..." aria-describedby="button-addon1" />
                 <button class="btn btn-dark" type="button" id="button-addon1" data-mdb-ripple-color="dark">
@@ -32,18 +32,18 @@
     </section>
 
     <!-- Section: Main  -->
-    <section class="d-flex flex-row align-items-center justify-content-between px-4 mt-3">
-        <div class="footer-menu">
+    <section class="d-flex flex-sm-row flex-column align-items-center text-center justify-content-between px-4 mt-3">
+        <div class="footer-menu text-md-start">
             <!-- Navigation -->
-            <p class="mb-1"><a class=" text-reset fw-bold" href="#">Info</a></p>
-            <p class="mb-1"><a class=" text-reset fw-bold" href="#">Legal</a></p>
-            <p class="mb-1"><a class=" text-reset fw-bold" href="#">CGV</a></p>
+            <p class="mb-1"><a class="text-reset" href="#">Info</a></p>
+            <p class="mb-1"><a class="text-reset" href="#">Legal</a></p>
+            <p class="mb-1"><a class="text-reset" href="#">CGV</a></p>
         </div>
-        <div>
+        <div class="text-md-end">
             <!-- Contact -->
-            <h6 class="text-uppercase text-end mb-1">Lôcal Saint Denis</h6>
-            <p class="text-end mb-1">20 rue de l'Aqueduc, 93200 Saint Denis</p>
-            <p class="text-end mb-1">boutiquecollective93200@gmail.com</p>
+            <h6 class="text-uppercase mb-1">Lôcal Saint Denis</h6>
+            <p class="mb-1">20 rue de l'Aqueduc, 93200 Saint Denis</p>
+            <p class="mb-1">boutiquecollective93200@gmail.com</p>
         </div>
     </section>
 
