--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,94 +1,89 @@
-<!-- Upper Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-0 fs-5">
-    <!-- Container wrapper -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white px-5">
     <div class="container-fluid">
-
-        <!-- Navbar brand -->
-        <a class="navbar-brand" style="height: 100px;" href="#">
-            <img src="assets/images/local_logo.jpg" class="h-100" alt="" loading="lazy" />
-        </a>
-
-        <!-- Hamburger toggle button -->
-        <button class="navbar-toggler" type="button" (click)="basicNavbar.toggle()" aria-expanded="false"
-            aria-label="Toggle navigation">
+        <a class="navbar-brand" style="height: 100px;" routerLink="home"><img src="assets/images/local_logo.jpg"
+                class="img-fluid h-100" alt="lôcal-logo" /></a>
+        <button class="navbar-toggler" type="button" (click)="rightAligned.toggle()"
+            aria-controls="navbarRightAlignExample" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
-
-        <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
-            
-            <!-- Left links -->
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <!-- Collapsible wrapper-->
+        <div class="collapse navbar-collapse" id="navbarRightAlignExample" mdbCollapse #rightAligned="mdbCollapse">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                 <li class="nav-item">
-                    <a routerLink="home" routerLinkActive="active" class="nav-link" aria-current="page">Boutique en ligne</a>
+                    <a routerLink="home" routerLinkActive="active" class="nav-link">
+                       <strong>Boutique en ligne</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="about" routerLinkActive="active" class="nav-link">Qui sommes nous ?</a>
+                    <a routerLink="about" routerLinkActive="active" class="nav-link"><strong>Qui sommes nous ?</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="events" routerLinkActive="active" class="nav-link">Evenèments</a>
+                    <a routerLink="events" routerLinkActive="active" class="nav-link"><strong>Evenèments</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="visitOurShop" routerLinkActive="active" class="nav-link">Le magasin</a>
+                    <a routerLink="visitOurShop" routerLinkActive="active" class="nav-link"><strong>Le magasin</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="contact" routerLinkActive="active" class="nav-link">Contact</a>
+                    <a routerLink="contact" routerLinkActive="active" class="nav-link"><strong>Contact</strong></a>
                 </li>
             </ul>
         </div>
+
+
     </div>
 </nav>
+<nav class="navbar py-0  px-5">
+    <ul class="navbar-nav d-flex flex-row ms-auto">
+        <!-- Cart icon -->
+        <li class="nav-item me-3 me-lg-2">
+            <a class="nav-link" href="#">
+                <i class="fas fa-shopping-cart fa-lg" style="color:black"></i>
+            </a>
+        </li>
 
-<!-- Lower Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white py-0">
-    <div class="container-fluid">
-        <ul class="navbar-nav d-flex flex-row ms-auto">
+        <!-- Dropdown user -->
+        <li mdbDropdown class="nav-item dropdown ms-2">
+            <a class="nav-link dropdown-toggle link-dark" href="#" id="navbarDropdownMenuLink" role="button" mdbDropdownToggle
+                aria-expanded="false">
+                <i class="fas fa-user fa-lg" style="color:black"></i>
+            </a>
+            <ul mdbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li>
+                    <a class="dropdown-item" href="">Connexion</a>
+                    <!-- (click)="openModal()" -->
+                </li>
+                <li>
+                    <hr class="dropdown-divider" />
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#">Inscription</a>
+                </li>
+            </ul>
+        </li>
 
-            <!-- Simple icons -->
-            <li class="nav-item me-3 me-lg-2">
-                <a class="nav-link" href="#">
-                    <i class="fas fa-shopping-cart" style="color:black"></i>
-                </a>
-            </li>
-
-            <!-- Dropdown user -->
-            <li mdbDropdown class="nav-item dropdown me-3 me-lg-2">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" mdbDropdownToggle
+        <!-- Dropdown flag -->
+        <ul class="navbar-nav mx-2">
+            <!-- Icon dropdown -->
+            <li mdbDropdown class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle link-dark" href="#" id="navbarDropdown" role="button" mdbDropdownToggle
                     aria-expanded="false">
-                    <i class="fas fa-user" style="color:black"></i>
-                </a>
-                <ul mdbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li>
-                        <a class="dropdown-item" href="#">Inscription</a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Connexion</a>
-                    </li>
-                </ul>
-            </li>
-
-            <!-- Dropdown flag -->
-            <li mdbDropdown class="nav-item dropdown me-3 me-lg-2">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" mdbDropdownToggle
-                    aria-expanded="false">
-                    <i class="france flag m-0"></i>
+                    <span class="iconify" style="margin-bottom: 4px;" data-icon="circle-flags:fr" data-width="22"></span>
                 </a>
                 <ul mdbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li>
-                        <a class="dropdown-item" href="#"><i class="france flag"></i>Français<i
-                                class="fa fa-check text-success ms-2"></i></a>
+                        <a class="dropdown-item" href="#">
+                            <span class="iconify" data-icon="circle-flags:fr" data-width="24"></span>
+                            <i class="fa fa-check text-success ms-3"></i>
+                        </a>
                     </li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#"><i class="united kingdom flag"></i>English</a>
-                    </li>
+                        <a class="dropdown-item" href="#">
+                            <span class="iconify" data-icon="circle-flags:us" data-width="24"></span>
+                        </a>
                 </ul>
             </li>
         </ul>
-    </div>
+    </ul>
 </nav>
