--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<mdb-carousel [indicators]="true" [dark]="true" class="container mt-4 fs-5">
+<mdb-carousel [indicators]="true" [dark]="true" class="container-fluid mt-4 px-5 fs-5 d-none d-sm-block">
     <mdb-carousel-item [interval]="5000">
         <app-carousel-item></app-carousel-item>
     </mdb-carousel-item>
