--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mx-3" style="width: 19rem;">
+<div class="card m-2" style="max-width: 18rem;">
     <img src="/assets/images/elodie2.jpg" class="card-img-top" alt="..." />
     <div class="card-body">
         <h4 class="card-title">Cadre Jade</h4>
@@ -6,6 +6,6 @@
             d’après un collage original
         </p>
         <p class="card-text text-muted">25,00 eur</p>
-        <a href="" class="btn btn-dark">Ajouter au panier</a>
+        <button type="button" class="btn btn-dark">Acheter</button>
     </div>
 </div>
