cart & single product page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,7 +24,7 @@
             <div class="d-flex flex-lg-row input-group justify-content-md-end flex-sm-column">
                 <input type="email" class="form-control-default ps-2" placeholder="Votre e-mail..."
                     aria-label="Votre e-mail..." aria-describedby="button-addon1" />
-                <button class="btn btn-dark" type="button" id="button-addon1" data-mdb-ripple-color="dark">
+                <button class="btn btn-dark btn-sm" type="button" id="button-addon1" data-mdb-ripple-color="dark">
                     Inscription<i class="far fa-paper-plane ps-2"></i>
                 </button>
             </div>
