--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,10 +1,9 @@
 <div class="card shadow-0 mx-2">
     <div class="card-body d-flex align-items-center" style="max-width: 18rem;">
-        <a router-link="['artist']" class="p-2 link-dark">
+        <a class="card-img-top rounded-circle z-depth-2 hover-overlay link-dark" routerLink="../artist">
             <div class="bg-image hover-overlay">
-                <img src="/assets/images/elodie.jpg" class="card-img-top rounded-circle z-depth-2 hover-overlay"
-                    alt="..." data-holder-rendered="true" />
-                <a href="#!">
+                <img src="/assets/images/elodie.jpg" class="card-img-top rounded-circle z-depth-2" />
+                <a router-link="../artist">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
                 </a>
                 <h4 class="card-title text-center mt-4">Malodepaname</h4>
