--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,33 +1,4 @@
-<!-- <div class="container my-5 py-3">
-    <div class="card">
-        <div class="row m-2">
-            <h4 class="fw-bold">Panier</h4>
-            <p><span>3</span> articles</p>
-        </div>
-        <div class="row">
-            <div class="col-md">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Article</th>
-                            <th scope="col">Quantité</th>
-                            <th scope="col">Sous-total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="link-dark">
-                            <td><img class="img-fluid" src="assets/images/elodie2.jpg" style="max-width: 120px;"><p>Description</p></td>
-                            <td><div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a></div></td>
-                            <td><div class="col">44.00 &euro; <span class="close"><i class="far fa-trash-alt"></i></span></div></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col-md-6"></div> -->
-
-
-<div class="card my-5 mw-100">
+<!-- <div class="card my-5 mw-100">
     <div class="row">
         <div class="col-md-8 cart">
             <div class="title">
@@ -71,4 +42,100 @@
             </div> <button class="btn">PAYEMENT</button>
         </div>
     </div>
-</div>
+</div> -->
+
+<section class="h-100 h-custom" style="background-color: #a0a0a0;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12">
+                <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                    <div class="card-body p-0">
+                        <div class="row g-0">
+                            <div class="col-lg-8">
+                                <div class="p-5">
+                                    <div class="d-flex justify-content-between align-items-center mb-5">
+                                        <h1 class="fw-bold mb-0 text-black">Panier</h1>
+                                        <h6 class="mb-0 text-muted"><span>3</span> items</h6>
+                                    </div>
+                                    <hr class="my-4">
+
+                                    <div class="row mb-4 d-flex justify-content-between align-items-center">
+                                        <div class="col-md-2 col-lg-2 col-xl-2">
+                                            <img src="assets/images/elodie2.jpg" class="img-fluid rounded-3"
+                                                alt="Cotton T-shirt">
+                                        </div>
+                                        <div class="col-md-3 col-lg-3 col-xl-3">
+                                            <h6 class="text-muted">Jade</h6>
+                                            <h6 class="text-black mb-0">Pins 32x32cm</h6>
+                                        </div>
+                                        <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                                            <button class="btn btn-outline-dark px-2"
+                                                onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                                <i class="fas fa-minus"></i>
+                                            </button>
+
+                                            <input id="form1" min="0" name="quantity" value="1" type="number"
+                                                class="form-control form-control-sm text-center" />
+
+                                            <button class="btn btn-outline-dark px-2"
+                                                onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                                <i class="fas fa-plus"></i>
+                                            </button>
+                                        </div>
+                                        <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                                            <h6 class="mb-0">5,00 €</h6>
+                                        </div>
+                                        <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                                            <a href="#!" class="text-muted"><i class="far fa-trash-alt"></i></a>
+                                        </div>
+                                    </div>
+
+                                    <hr class="my-4">
+
+                                    <div class="pt-5">
+                                        <h6 class="mb-0">
+                                            <a href="#!" class="text-body">
+                                                <i class="fas fa-long-arrow-alt-left me-2"></i>Continuez les achats
+                                            </a>
+                                        </h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4" style="background-color: #e5e5e5;">
+                                <div class="p-5">
+                                    <h4 class="fw-bold mb-5 mt-2 pt-1">Récapitulatif commande</h4>
+                                    <hr class="my-4">
+
+                                    <div class="d-flex justify-content-between mb-4">
+                                        <h5>Articles : <span>1</span></h5>
+                                        <h5>5,00 €</h5>
+                                    </div>
+
+                                    <h5 class="mb-3">Livraison</h5>
+
+                                    <div class="mb-4 pb-2">
+                                        <select class="select">
+                                            <option value="1">Standard - <span>2,00 €</span></option>
+                                            <option value="2">Relay - <em>gratuit</em></option>
+                                            <option value="3">En magasin - <em>gratuit</em></option>
+                                        </select>
+                                    </div>
+
+                                    <hr class="my-4">
+
+                                    <div class="d-flex justify-content-between mb-5">
+                                        <h5 class="text-uppercase">Total :</h5>
+                                        <h5>5,00 €</h5>
+                                    </div>
+
+                                    <button type="button" class="btn btn-dark btn-block btn-lg"
+                                        data-mdb-ripple-color="dark">Payer</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
