--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,8 +35,8 @@
     <ul class="navbar-nav d-flex flex-row ms-auto">
         <!-- Cart icon -->
         <li class="nav-item me-3 me-lg-2">
-            <a class="nav-link" href="#">
-                <i class="fas fa-shopping-cart fa-lg" style="color:black"></i>
+            <a routerLink="cart" class="nav-link">
+                <i class="fas fa-shopping-cart fa-lg link-dark"></i>
             </a>
         </li>
 
