--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,49 +1,3 @@
-<!-- <div class="card my-5 mw-100">
-    <div class="row">
-        <div class="col-md-8 cart">
-            <div class="title">
-                <div class="row">
-                    <div class="col">
-                        <h4><b>Panier</b></h4>
-                    </div>
-                    <div class="col align-self-center text-right text-muted"><span>3</span> articles</div>
-                </div>
-            </div>
-            <div class="row border-top border-bottom">
-                <div class="row main align-items-center">
-                    <div class="col"><img class="img-fluid" src="assets/images/elodie2.jpg"></div>
-                    <div class="col">
-                        <div class="row text-muted">Jade</div>
-                        <div class="row">Pins 32x32 cm</div>
-                    </div>
-                    <div class="col"> <a href="#">-</a><span class="border">1</span><a href="#">+</a> </div>
-                    <div class="col">&euro; 44,00 <a class="close" href="#"><i class="far fa-trash-alt"></i></a></div>
-                </div>
-            </div>
-            <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Continuez les achats</span></div>
-        </div>
-        <div class="col-md-4 summary">
-            <div>
-                <h5><b>Récapitulatif commande :</b></h5>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col" style="padding-left:0;">Articles: <span>3</span></div>
-                <div class="col text-right">132,00 &euro;</div>
-            </div>
-            <form>
-                <p>LIVRAISON</p> <select>
-                    <option class="text-muted">Standard- &euro;3,50</option>
-                </select>
-            </form>
-            <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                <div class="col">PRIX TOTAL</div>
-                <div class="col text-right">137,00 &euro;</div>
-            </div> <button class="btn">PAYEMENT</button>
-        </div>
-    </div>
-</div> -->
-
 <section class="h-100 h-custom" style="background-color: #a0a0a0;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -51,14 +5,16 @@
                 <div class="card card-registration card-registration-2" style="border-radius: 15px;">
                     <div class="card-body p-0">
                         <div class="row g-0">
+                            <!-- Left table -->
                             <div class="col-lg-8">
                                 <div class="p-5">
+                                    <!-- Header tableau -->
                                     <div class="d-flex justify-content-between align-items-center mb-5">
                                         <h1 class="fw-bold mb-0 text-black">Panier</h1>
                                         <h6 class="mb-0 text-muted"><span>3</span> items</h6>
                                     </div>
                                     <hr class="my-4">
-
+                                    <!-- Produit -->
                                     <div class="row mb-4 d-flex justify-content-between align-items-center">
                                         <div class="col-md-2 col-lg-2 col-xl-2">
                                             <img src="assets/images/elodie2.jpg" class="img-fluid rounded-3"
@@ -68,20 +24,20 @@
                                             <h6 class="text-muted">Jade</h6>
                                             <h6 class="text-black mb-0">Pins 32x32cm</h6>
                                         </div>
+                                        <!-- Quantity select -->
                                         <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                                             <button class="btn btn-outline-dark px-2"
                                                 onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                                                 <i class="fas fa-minus"></i>
                                             </button>
-
                                             <input id="form1" min="0" name="quantity" value="1" type="number"
                                                 class="form-control form-control-sm text-center" />
-
                                             <button class="btn btn-outline-dark px-2"
                                                 onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                                                 <i class="fas fa-plus"></i>
                                             </button>
                                         </div>
+                                        <!-- Sous-total -->
                                         <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                                             <h6 class="mb-0">5,00 €</h6>
                                         </div>
@@ -101,18 +57,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- Right table -->
                             <div class="col-lg-4" style="background-color: #e5e5e5;">
                                 <div class="p-5">
                                     <h4 class="fw-bold mb-5 mt-2 pt-1">Récapitulatif commande</h4>
                                     <hr class="my-4">
-
                                     <div class="d-flex justify-content-between mb-4">
                                         <h5>Articles : <span>1</span></h5>
-                                        <h5>5,00 €</h5>
+                                        <h5>2,00 €</h5>
                                     </div>
-
+                                    <!-- Choix livraison -->
                                     <h5 class="mb-3">Livraison</h5>
-
                                     <div class="mb-4 pb-2">
                                         <select class="select">
                                             <option value="1">Standard - <span>2,00 €</span></option>
@@ -122,14 +77,17 @@
                                     </div>
 
                                     <hr class="my-4">
-
+                                    <!-- TOTAL -->
                                     <div class="d-flex justify-content-between mb-5">
                                         <h5 class="text-uppercase">Total :</h5>
-                                        <h5>5,00 €</h5>
+                                        <h5>4,00 €</h5>
                                     </div>
+                                    <!-- Paiement -->
+                                    <!-- <button type="button" class="btn btn-dark btn-block btn-lg"
+                                        data-mdb-ripple-color="dark" (click)="openModal()">Payer</button> -->
 
-                                    <button type="button" class="btn btn-dark btn-block btn-lg"
-                                        data-mdb-ripple-color="dark">Payer</button>
+                                        <button type="button" class="btn btn-dark btn-block btn-lg"
+                                        data-mdb-ripple-color="dark" (click)="initializePayment(2)" >Procédez au paiement</button>
                                 </div>
                             </div>
                         </div>
