--- a/src/app/artist-bar/artist-bar.component.html
+++ b/src/app/artist-bar/artist-bar.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid d-flex flex-column align-items-center justify-content-around flex-md-row flex-sm-wrap">
+<div class="container-fluid d-flex flex-column align-items-center justify-content-start flex-md-row flex-sm-wrap px-5">
     <app-artist-card></app-artist-card>
-    <app-product-card></app-product-card>
-    <app-product-card></app-product-card>
-    <app-product-card></app-product-card>
+    <app-product-card  *ngFor="let product of products" [product]="product"></app-product-card> <!-- traduction: "let element of array" [variable]="element" -->
+    <!-- <app-product-card></app-product-card>
+    <app-product-card></app-product-card> -->
 </div>
 <div class="d-flex justify-content-end me-5">
     <button type="button" class="btn btn-rounded my-3">
