crop images from url

--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -1,8 +1,11 @@
-h4 {
-    font-weight: 600;
+.crop {
+    width: 288px;
+    height: 288px;
+    overflow: hidden;
 }
 
-button {
-    max-width: max-content;
-    font-size: small;
+.crop img {
+    width: 400px;
+    height: 400px;
+    margin: -50px 0px 0px -50px;
 }
