--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,11 +1,17 @@
 <div class="card m-4" style="max-width: 18rem;">
-    <a  routerLink="/product/{{id}}"><img [src]="product.imageURL" class="card-img-top" alt="product image : {{ product.title }}"/></a>
+    <div class="crop">
+        <a routerLink="/product/{{id}}"><img [src]="product.imageURL"
+                alt="product image : {{ product.title }}" />
+        </a>
+    </div>
+
     <div class="card-body">
-        <h4 class="card-title">{{ product.title }}</h4>
+        <h4 class="card-title fw-bold">{{ product.title }}</h4>
         <p class="card-text">
             {{ product.subtitle }}
         </p>
         <p class="card-text text-muted">{{ product.price | currency: 'EUR'}} </p>
-        <button type="button" class="btn" [ngClass]="[buttonText === 'Produit acheté' ? 'btn-light' : 'btn-dark']" (click)="onBuyProduct()">{{ buttonText }}</button>
+        <button type="button" class="btn" [ngClass]="[buttonText === 'Produit acheté' ? 'btn-light' : 'btn-dark']"
+            (click)="onBuyProduct()">{{ buttonText }}</button>
     </div>
 </div>
