product service & param route

--- a/src/app/artist-card/artist-card.component.html
+++ b/src/app/artist-card/artist-card.component.html
@@ -1,11 +1,11 @@
-<div class="card shadow-0 m-4" style="min-width: 288px;">
+<!-- <div class="card shadow-0 m-4"> -->
         <a class="card-img-top rounded-circle z-depth-2 hover-overlay link-dark" routerLink="../artist">
-            <div class="bg-image hover-overlay d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center bg-image hover-overlay" style="width: 336px; height: 529;">
                 <img src="/assets/images/elodie.jpg" class="card-img-top rounded-circle z-depth-2" style="max-width: 75%;"/>
                 <a router-link="../artist">
-                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
+                    <div class="mask"></div>
                 </a>
                 <h4 class="card-title fw-bold my-4">Malodepaname</h4>
             </div>
         </a>
-</div>
+<!-- </div> -->
