--- a/src/app/presentation-page/presentation-page.component.html
+++ b/src/app/presentation-page/presentation-page.component.html
@@ -3,72 +3,39 @@
         <div class="col-md-3">
             <img src="/assets/images/elodie.jpg" alt="">
             <h2 class="fw-bold">Malodepaname</h2>
-            <h5 class="fw-bold">
-                Contact :
-            </h5>
-            <div><a href="#">malodepaname@mail.fr</a></div>
-            <div><a href="#">etsy.com</a></div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
             <p style="font-size: 1.2rem;">Malodepaname est Dyonisienne.
                 De part son enfance et son parcours, l’image a toujours fait partie de sa vie, et le collage
                 s’est avéré une suite logique.
-                Elle récupère toutes sortes de papiers, photos, journaux, affiches, papier-peint ,…
+                Elle récupère toutes sortes de papiers, photos, journaux, affiches, papier-peint…
                 Et les découpes, les détournes, les assembles.
                 Au fil du temps, une galerie de portraits (mais pas que) à vu le jour.
                 avec un prénom à chaque fois, comme pour les rendre plus vivants.
                 Un univers assez féminin, décliné sur différents objets selon son envie de l’accrocher
                 ou de l’emporter avec soi.
             </p>
-
+            <h5 class="fw-bold">
+                Contact :
+            </h5>
+            <div>malodepaname@mail.fr</div>
+            <div><a href="https://www.etsy.com/shop/malodepaname?ref=search_shop_redirect" class="link-dark">etsy.com
+                    <i class="fas fa-external-link-alt text-muted"></i>
+                </a></div>
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-md-5"><hr></div>
+    <div class="row m-5">
+        <div class="col-md-5">
+            <hr>
+        </div>
         <div class="col-md-2 text-center"><i class="fas fa-angle-double-down"></i></div>
-        <div class="col-md-5"><hr></div>
-        
-    </div>
-    <div class="row mt-5">
-        <div class="col-md-12 container">
-            <div class="row">
-                <h2 class="text-center"><em> Toutes les créations de <span>Malodepaname</span></em></h2>
-            </div>
-            <div class="row">
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-                <div class="col-md-3 my-3">
-                    <app-product-card></app-product-card>
-                </div>
-            </div>
+        <div class="col-md-5">
+            <hr>
         </div>
+
     </div>
+    <h2 class="text-center"><em> Toutes les créations de <span>Malodepaname</span></em></h2>
+    <!-- <app-product-list class="d-flex flex-row align-items-center justify-content-start flex-md-row flex-sm-wrap"> -->
+    <app-product-list class="d-flex flex-row align-items-center justify-content-start flex-md-row flex-sm-wrap"></app-product-list>
 </div>
