--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,6 +1,6 @@
-<div class="card m-4" style="max-width: 18rem;">
+<div class="card m-2" style="max-width: 18rem;">
     <div class="crop">
-        <a routerLink="/product/{{id}}"><img [src]="product.imageURL"
+        <a routerLink="/product/{{ product.id }}"><img [src]="product.imageURL"
                 alt="product image : {{ product.title }}" />
         </a>
     </div>
