--- a/src/app/single-product/single-product.component.html
+++ b/src/app/single-product/single-product.component.html
@@ -1,23 +1,17 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6"><img src="/assets/images/elodie2" alt=""></div>
-        <div class="col-md-6"></div>
-    </div>
-</div>
-
-<div class="container card mb-3 fs-5">
+<div *ngIf="product" class="container-fluid card my-3 mx-5 fs-5">
     <div class="row g-0">
-        <div class="col-md-6 py-3">
-            <div style="max-width: 550px;">
-                <img src="assets/images/elodie3.jpg" alt="..." class="img-fluid" />
+        <div class="col-md-6 p-3">
+            <div class="mb-5" style="max-width: 550px;">
+                <img src="{{ product.imageURL }}" alt="..." class="img-fluid" />
             </div>
+            <a type="button" (click)="goBack()" class="link-dark"><i class="fas fa-arrow-left"></i><em> Retour</em></a>
         </div>
-        <div class="col-md-6 text-end">
+        <div class="col-md-6 text-end p-3">
             <div class="card-body m-5">
                 <div class="m-3">
-                    <h2 class="card-title">Nom produit</h2>
-                    <h4>Type produit</h4>
-                    <h4 class="fw-bold">Prix unitaire : <span>0,00 eur</span></h4>
+                    <h2 class="card-title">{{ product.title }}</h2>
+                    <h4>{{ product.subtitle }}</h4>
+                    <h4 class="fw-bold">Prix unitaire : <span>{{ product.price | currency:'EUR'}}</span></h4>
                 </div>
                 <div>
                     <form action="">
@@ -31,15 +25,22 @@
                                 <option value="4">4</option>
                                 <option value="5">5</option>
                             </select>
-                            <div id="stock" class="form-text fw-bold text-success">En stock</div>
+                            <!-- <div class="form-text fw-bold text-success">En stock</div> -->
+                            <div>
+                                <div *ngIf="product.quantity > 3" class="form-text fw-bold text-success">En stock</div>
+
+                                <div *ngIf="product.quantity === 0" class="form-text fw-bold text-danger">Article
+                                    indisponible</div>
+                                <div *ngIf="isBetween(product.quantity)" class="form-text fw-bold text-warning">Plus que
+                                    {{product.quantity}} articles !</div>
+                            </div>
+
                         </div>
                         <button type="submit" class="btn btn-dark btn-sm m-3">Ajouter au panier</button>
                     </form>
                 </div>
                 <div class="mt-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quae dolores ea accusamus aliquam
-                        quaerat, numquam sequi veritatis repellat atque itaque quam. Laborum aut repellat repudiandae ea
-                        tempora beatae dolorem!</p>
+                    <p>{{ product.description }}</p>
                 </div>
             </div>
         </div>
