--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,17 @@
-<p>About works !</p>
+<div class="row d-flex justify-content-center mt-5">
+  <div class="col-md-10 col-xl-8 text-center mb-3">
+    <h2 class="mb-4 fw-bold">Lôcal Saint-Denis</h2>
+    <h4>Boutique d’art et d’artisanat</h4>
+    <p>
+      Lôcal est une boutique collective d'artistes et artisans de Saint-Denis, ouverte en février 2022.
+      Vous y trouverez des créations pièces uniques hyper locales : objets, luminaires, bijoux, illustrations,
+      vêtements...
+      A travers notre site, vous trouverez des informations sur la boutique, être au courant des derniers évènements
+      locaux
+      et régionaux, mais surtout découvrir les créateurs et leurs productions et acheter en ligne des pièces que
+      vous ne trouverez pas dans la vitrine de la boutique.
+    </p>
+  </div>
+</div>
+
+<app-artist-list class="d-flex justify-content-between flex-row text-center mx-5 px-5 mb-5"></app-artist-list>
