--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,13 +5,13 @@
 
         <!-- Social icons -->
         <div class="footer-menu">
-            <a href="" class="me-4 text-reset">
+            <a routerLink="../contact" class="me-4 text-reset">
                 <i class="far fa-envelope fa-2x"></i>
             </a>
-            <a href="" class="me-4 text-reset">
+            <a href="https://www.facebook.com/localsaintdenis" target="_blank" class="me-4 text-reset">
                 <i class="fab fa-facebook fa-2x my-3"></i>
             </a>
-            <a href="" class="me-4 text-reset">
+            <a href="https://www.instagram.com/local_saintdenis/?hl=fr" target="_blank" class="me-4 text-reset">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
         </div>
