--- a/src/app/artist-caption/artist-caption.component.scss
+++ b/src/app/artist-caption/artist-caption.component.scss
@@ -1,14 +1,19 @@
-.testimonial-card .card-up {
+.caption-card .card-up {
     height: 120px;
     overflow: hidden;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
-    }
-    
-    .testimonial-card .avatar {
-    width: 110px;
+}
+
+.caption-card {
+    width: 400px;
+}
+
+.avatar img {
+    width: 200px;
+    height: 200px;
     margin-top: -60px;
     overflow: hidden;
     border: 3px solid #fff;
     border-radius: 50%;
-    }
+}
